Fix "my Devianart page" being too dark on dark mode"

--- a/public/css/dark-mode.css
+++ b/public/css/dark-mode.css
@@ -44,3 +44,5 @@
      .dark .sticky .navbar-menu{background-color:#353b48;}
      .dark .sticky .menu-toggler.span{background-color:#f1f1f1;}
 }
+
+.formore a { color: white; }
